Update Controller.java